Fix direction overflow on desktop

--- a/src/scss/includes/components/panel.scss
+++ b/src/scss/includes/components/panel.scss
@@ -43,6 +43,7 @@ $bottom-margin: 40px;
     max-height: calc(100vh - (92px + #{$bottom-margin})); // 92px is panel.getBoundingClientRect().top
 
     &-header {
+      z-index: 0;
       flex-shrink: 0;
     }
 
